[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jofas/deserialize_custom_strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[package.metadata.docs.rs]
#features = ["openssl", "rustls", "compress", "secure-cookies"]

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
awc = {version = "3", features = ["openssl"]}
openssl = "0.10.42"
url = "2.3.1"
serde = {version = "1", features = ["derive"]}

env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
log = "0.4"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"

chrono = "0.4.22"
dotenv = "0.15.0"
binance-rs-async = "1.1.11"
serde_json = "1.0.85"
